Navbar finished on mobile, tablets and desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://kit.fontawesome.com/179bec29ec.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="rsc/google-icon.png" type="image/png">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main-phones.css">
+    <link rel="stylesheet" href="css/main-tablets.css" media="screen and (min-width:680px)">
+    <link rel="stylesheet" href="css/main-desktops.css" media="screen and (min-width:992px)">
     <title>Google Drive: Cloud Storage</title>
 </head>
 <body>
@@ -34,48 +36,18 @@
         <div class="center">
             <img src="rsc/google-icon.png" alt="google-logo" class="responsive-img sidenav-img">
         </div>
-        <li><a href="#meet" class="nav-item-mobile black-text"><strong>Meet Drive</strong><i class="material-icons right">chevron_right</i></a></li>
-        <li><a href="#using" class="nav-item-mobile black-text">Using Drive<i class="material-icons right">chevron_right</i></a></li>
-        <li><a href="#download" class="nav-item-mobile black-text">Download<i class="material-icons right">chevron_right</i></a></li>
-        <li><a href="#business" class="nav-item-mobile black-text">For Business<i class="material-icons right">chevron_right</i></a></li>
-        <li><a href="#help" class="nav-item-mobile black-text">Help<i class="material-icons right">chevron_right</i></a></li>
-        <li><a href="#!" class="waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a></li>
+        <li class="sidenav-mobile"><a href="#meet" class="nav-item-mobile black-text center"><strong>Meet Drive</strong></a></li>
+        <li class="sidenav-mobile"><a href="#using" class="nav-item-mobile black-text center">Using Drive</a></li>
+        <li class="sidenav-mobile"><a href="#download" class="nav-item-mobile black-text center">Download</a></li>
+        <li class="sidenav-mobile"><a href="#business" class="nav-item-mobile black-text center">For Business</a></li>
+        <li class="sidenav-mobile"><a href="#help" class="nav-item-mobile black-text center">Help</a></li>
+        <li class="sidenav-mobile-button"><a href="#!" class="waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a></li>
     </ul>
     <!-- Section: Hero -->
     <div class="slider fullscreen">
         <ul class="slides">
             <li>
                 <img src="rsc/hero-wallapaper2.jpg" alt="hero">
-                <div class="caption">  
-                    <div class="center">
-                        <img src="rsc/google-icon.png" alt="google-logo" class="responsive-img hero-img">
-                        <h1 class="white-text">A safe place for all your files</h1>
-                    </div>
-                        <div class="row">
-                            <div class="col s12 m12 l6">
-                                <div class="card small">
-                                    <div class="card-content black-text center">
-                                        <span class="card-title card-title-hero">Personal</span>
-                                        <p class="black-text card-content-hero">Store, share, and access your files from any device. Your first 15 GB of storage are free.</p>
-                                    </div>
-                                    <div class="card-action center">
-                                        <a href="#" class="waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col s12 m12 l6">
-                                <div class="card small">
-                                    <div class="card-content black-text center">
-                                        <span class="card-title card-title-hero">Business</span>
-                                        <p class="black-text card-content-hero">With Drive Enterprise, businesses only pay for the storage employees use. It comes with Google Docs, Sheets, and Slides — and works seamlessly with Microsoft Office.</p>
-                                    </div>
-                                    <div class="card-action center">
-                                        <a href="#" class="waves-effect waves-light btn-large blue darken-1">Learn More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                </div>
             </li>
         </ul>
     </div>
