Hero btns fixed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <p class="black-text card-content-hero">Store, share, and access your files from any device. Your first 15 GB of storage are free.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a>
+                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Go to Google Drive</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                             <p class="black-text card-content-hero">With Drive Enterprise, businesses only pay for the storage employees use. It comes with Google Docs, Sheets, and Slides — and works seamlessly with Microsoft Office.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large blue darken-1">Learn More</a>
+                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                             <p class="black-text card-content-hero">Store, share, and access your files from any device. Your first 15 GB of storage are free.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a>
+                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Go to Google Drive</a>
                         </div>
                     </div>
                 </div>
@@ -101,13 +101,14 @@
                             <p class="black-text card-content-hero">With Drive Enterprise, businesses only pay for the storage employees use. It comes with Google Docs, Sheets, and Slides — and works seamlessly with Microsoft Office.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large blue darken-1">Learn More</a>
+                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Section:  on tablets only -->
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
