--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="navbar-fixed">
         <nav class="white">
             <div class="nav-wrapper">
-                <a href="#hero" class="brand-logo black-text"><span class="blue-text">G</span><span class="red-text">o</span><span class="yellow-text">o</span><span class="blue-text">g</span><span class="green-text">l</span><span class="red-text">e</span> Drive</a>
+                <a href="#hero" class="brand-logo black-text"><strong><span class="blue-text">G</span><span class="red-text">o</span><span class="yellow-text">o</span><span class="blue-text">g</span><span class="green-text">l</span><span class="red-text">e</span></strong> Drive</a>
                 <a href="#hero" class="sidenav-trigger" data-target="mobile-demo"><i class="material-icons black-text">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="#hero" class="black-text nav-item">Meet Drive</a></li>
@@ -112,7 +112,7 @@
     <section class="store-any-file valign-wrapper scrollspy" id="store">
         <div class="container">
             <div class="row hide-on-med-and-up">
-                <div class="col s12 m6">
+                <div class="col s12">
                     <img class="responsive-img" src="rsc/store-file.PNG" alt="store-file">
                 </div>
                 <div class="col s12">
@@ -141,8 +141,33 @@
         <div class="parallax"><img class="responsive-img" src="rsc/parallax1.jpg"></div>
     </div>
     <!-- Section:  Stuff anywhere -->
-    <section class="stuff-anywhare scrollspy" id="anywhere">
-
+    <section class="stuff-anywhare valign-wrapper scrollspy" id="anywhere">
+        <div class="container hide-on-med-and-up">
+            <div class="row">
+                <div class="col s12">
+                    <img class="responsive-img" src="rsc/files-anywhere.jpg" alt="files-anywhere">
+                </div>
+                <div class="col 12">
+                    <div class="stuff-info">
+                        <h3 class="black-text stuff-title">See your stuff anywhere</h3>
+                        <p class="stuff-text">Your files in Drive can be reached from any smartphone, tablet, or computer. So wherever you go, your files follow.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row valign-wrapper hide-on-small-only">
+            <div class="col m6">
+                <div class="stuff-info">
+                    <div class="container">
+                        <h3 class="black-text stuff-title">See your stuff anywhere</h3>
+                        <p class="stuff-text">Your files in Drive can be reached from any smartphone, tablet, or computer. So wherever you go, your files follow.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col m6 right-align">
+                <img class="responsive-img" src="rsc/files-anywhere.jpg" alt="files-anywhere">
+            </div>
+        </div>
     </section>
     <!-- Parallax -->
     <div class="image-section-2 hide-on-large-only"></div>
