Main feed finished

--- a/index.html
+++ b/index.html
@@ -175,8 +175,20 @@
         <div class="parallax"><img class="responsive-img" src="rsc/parallax2.jpg"></div>
     </div>
     <!-- Section:  Share files -->
-    <section class="share-files scrollspy" id="share">
-
+    <section class="share-files valign-wrapper scrollspy" id="share">
+        <div class="container">
+            <div class="row">
+                <div class="col s12 center">
+                    <img src="rsc/share.jpg" alt="share-files" class="responsive-img">
+                </div>
+                <div class="col s12 center">
+                    <div class="container">
+                        <h3 class="black-text share-title">Share files and folders</h3>
+                        <p class="share-text">You can quickly invite others to view, download, and collaborate on all the files you want–no email attachment needed.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Parallax -->
     <div class="image-section-3 hide-on-large-only"></div>
@@ -184,8 +196,17 @@
         <div class="parallax"><img class="responsive-img" src="rsc/parallax3.jpg"></div>
     </div>
     <!-- Section:  Get started -->
-    <section class="get-started scrollspy" id="started">
-
+    <section class="get-started valign-wrapper scrollspy" id="started">
+        <div class="container center">
+            <div class="row">
+                <img src="rsc/google-icon.png" alt="logo-google" class="hero-img">
+                <h3 class="started-title">Get started with Drive for free</h3>
+                <a href="#" class="waves-effect waves-light btn-large btn-started blue darken-1">Go to Google Drive</a>
+            </div>
+            <div class="row">
+                <a href="#" class="started-text">Need more than 15 GB? Upgrade to Google One</a>
+            </div>
+        </div>
     </section>
 
     <!-- Compiled and minified JavaScript -->
