--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#anywhere" class="black-text nav-item">Download</a></li>
                     <li><a href="#share" class="black-text nav-item">For Business</a></li>
                     <li><a href="#started" class="black-text nav-item">Help</a></li>
-                    <li><a href="#!" class="nav-item-btn waves-effect waves-light blue darken-1 left">Go to Google Drive</a></li>
+                    <li><a href="#!" class="hoverable nav-item-btn waves-effect waves-light blue darken-1 left">Go to Google Drive</a></li>
                 </ul>
             </div>
         </nav>
@@ -41,7 +41,7 @@
         <li class="sidenav-mobile"><a href="#anywhere" class="nav-item-mobile black-text center">Download</a></li>
         <li class="sidenav-mobile"><a href="#share" class="nav-item-mobile black-text center">For Business</a></li>
         <li class="sidenav-mobile"><a href="#started" class="nav-item-mobile black-text center">Help</a></li>
-        <li class="sidenav-mobile-button"><a href="#!" class="waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a></li>
+        <li class="sidenav-mobile-button"><a href="#!" class="hoverable waves-effect waves-light btn-large blue darken-1">Go to Google Drive</a></li>
     </ul>
     <!-- Section: Hero on mobile only -->
     <section class="hero hide-on-med-and-up scrollspy" id="hero">
@@ -56,7 +56,7 @@
                             <p class="black-text card-content-hero">Store, share, and access your files from any device. Your first 15 GB of storage are free.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Go to Google Drive</a>
+                            <a href="#" class="hoverable waves-effect waves-light btn-large btn-hero blue darken-1">Go to Google Drive</a>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                             <p class="black-text card-content-hero">With Drive Enterprise, businesses only pay for the storage employees use. It comes with Google Docs, Sheets, and Slides — and works seamlessly with Microsoft Office.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Learn More</a>
+                            <a href="#" class="hoverable waves-effect waves-light btn-large btn-hero blue darken-1">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                             <p class="black-text card-content-hero">Store, share, and access your files from any device. Your first 15 GB of storage are free.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Go to Google Drive</a>
+                            <a href="#" class="hoverable waves-effect waves-light btn-large btn-hero blue darken-1">Go to Google Drive</a>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                             <p class="black-text card-content-hero">With Drive Enterprise, businesses only pay for the storage employees use. It comes with Google Docs, Sheets, and Slides — and works seamlessly with Microsoft Office.</p>
                         </div>
                         <div class="card-action center">
-                            <a href="#" class="waves-effect waves-light btn-large btn-hero blue darken-1">Learn More</a>
+                            <a href="#" class="hoverable waves-effect waves-light btn-large btn-hero blue darken-1">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -201,13 +201,45 @@
             <div class="row">
                 <img src="rsc/google-icon.png" alt="logo-google" class="hero-img">
                 <h3 class="started-title">Get started with Drive for free</h3>
-                <a href="#" class="waves-effect waves-light btn-large btn-started blue darken-1">Go to Google Drive</a>
+                <a href="#" class="hoverable waves-effect waves-light btn-large btn-started blue darken-1">Go to Google Drive</a>
             </div>
             <div class="row">
                 <a href="#" class="started-text">Need more than 15 GB? Upgrade to Google One</a>
             </div>
         </div>
     </section>
+    <footer class="footer grey lighten-5 z-depth-2">
+        <div class="container center">
+            <div class="row">
+                <div class="col s6 l3">
+                    <h4 class="footer-title">About Drive</h4>
+                    <a class="footer-text" href="">Meet Google Drive</a><br>
+                    <a class="footer-text" href="">Using Drive</a><br>
+                    <a class="footer-text" href="">Get Started</a><br>
+                </div>
+                <div class="col s6 l3">
+                    <h4 class="footer-title">Storage Pricing</h4>
+                    <a class="footer-text" href="">Get more storage</a><br>
+                    <a class="footer-text" href="">Pricing FAQs</a><br>
+                    <a class="footer-text" href="">Free up space</a><br>
+                </div>
+                <div class="col s6 l3">
+                    <h4 class="footer-title">Downloads</h4>
+                    <a class="footer-text" href="">Drive for Mac/PC</a><br>
+                    <a class="footer-text" href="">Drive for Android</a><br>
+                    <a class="footer-text" href="">Drive for IOS</a><br>
+                </div>
+                <div class="col s6 l3">
+                    <h4 class="footer-title">Support</h4>
+                    <a class="footer-text" href="">Help center</a><br>
+                    <a class="footer-text" href="">Help forum</a><br>
+                    <a class="footer-text" href="">Contact us</a><br>
+                </div>
+            </div>
+            <div class="divider"></div>
+            <p class="flow-text">Google Drive 2010 &copy; 2020</p>
+        </div>
+    </footer>
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
